--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,7 @@ authors = [
 ]
 description = "Session management for Actix Web"
 keywords = ["http", "web", "framework", "async", "session"]
-repository.workspace = true
-homepage.workspace = true
-license.workspace = true
-edition.workspace = true
-rust-version.workspace = true
+edition = 2021
 
 [package.metadata.docs.rs]
 rustdoc-args = ["--cfg", "docsrs"]
